--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,8 @@ name: observation-system-detection-api-main
 on:
   push:
     branches: [ main ]
+    
+  workflow_dispatch:
 
 jobs:
   continous-integration:
