--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,26 +6,80 @@ on:
 jobs:
   continous-integration:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Install dependencies
-        run: |
-          python -m venv venv
-          . venv/bin/activate
-          pip install -r requirements.txt
-      - name: Build Lambda function ZIP file
-        run: |
-          mkdir dist
-          zip -r dist/lambda_function.zip .
-        if: success()
-      - name: Deploy to AWS Lambda
-        uses: appleboy/lambda-action@master
+      - uses: actions/checkout@v2
+
+      - name: Python Setup
+        uses: actions/setup-python@v2
         with:
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_default_region: ${{ secrets.AWS_DEFAULT_REGION }}
-          function_name: observation-system-detection-api
-          zip_file: dist/lambda_function.zip
-        if: success()
+          python-version: 3.10
+          architecture: x64
+          
+      - name: Install Python Virtual Env
+        run: pip3 install virtualenv
+
+      - name: Setup Virtual env
+        uses: actions/cache@v2
+        id: cache-venv
+        with:
+          path: venv
+          key: ${{ runner.os }}-venv-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-venv-
+
+      - name: Activate and Install Depencies into Virtual env
+        run: python -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt
+        if: steps.cache-venv.outputs.cache-hit != 'true'
+
+      - name: Activate venv and Run Test
+        run: . venv/bin/activate && pytest
+
+      - name: Create Zipfile archive of Dependencies
+        run: |
+          cd ./venv/lib/python3.8/site-packages
+          zip -r9 ../../../../temp.zip .
+
+      - name: Add App to Zip file
+        run: unzip temp.zip && zip -g api.zip -r .
+
+      - name: Upload zip file artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: api
+          path: api.zip
+
+  continuous-deployment:
+    runs-on: ubuntu-latest
+    needs: [continous-integration]
+    if: github.ref == 'refs/heads/master'
+    steps:
+      # Step 1
+      - name: Install AWS CLI
+        uses: unfor19/install-aws-cli-action@v1
+        with:
+          version: 1
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+      # Step 2
+      - name: Download Lambda api.zip
+        uses: actions/download-artifact@v2
+        with:
+          name: api
+      # Step 3
+      - name: Upload to S3
+        run: aws s3 cp api.zip s3://observation-system-detection-api-main/api.zip
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+      # Step 4
+      - name: Deploy new Lambda
+        # # <YourLambdaName>の部分は自身の作成したLambda名を入れる, <YourS3Bucket>の部分は自身のS3のバケット名を入れる
+        run: aws lambda update-function-code --function-name observation-system-detection-api --s3-bucket observation-system-detection-api-main --s3-key api.zip
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
