--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
   continuous-deployment:
     runs-on: ubuntu-latest
     needs: [continous-integration]
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     steps:
       # Step 1
       - name: Install AWS CLI
