--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  continous-integration:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -29,7 +29,7 @@ jobs:
             ${{ runner.os }}-venv-
 
       - name: Activate and Install Depencies into Virtual env
-        run: python -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt
+        run: python -m venv venv && source venv/bin/activate
         if: steps.cache-venv.outputs.cache-hit != 'true'
 
       - name: Create Zipfile archive of Dependencies
@@ -46,9 +46,9 @@ jobs:
           name: api
           path: api.zip
 
-  continuous-deployment:
+  deploy:
     runs-on: ubuntu-latest
-    needs: [continous-integration]
+    needs: [build]
     steps:
       # Step 1
       - name: Install AWS CLI
@@ -73,7 +73,6 @@ jobs:
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
       # Step 4
       - name: Deploy new Lambda
-        # # <YourLambdaName>の部分は自身の作成したLambda名を入れる, <YourS3Bucket>の部分は自身のS3のバケット名を入れる
         run: aws lambda update-function-code --function-name observation-system-detection-api --s3-bucket observation-system-detection-api-main --s3-key api.zip
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
