--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
-uvicorn
+asyncio==3.4.3
 fastapi==0.81.0
-youtube_dl
-asyncio
-pafy
+thop==0.1.1.post2209072238
 -f https://download.pytorch.org/whl/torch_stable.html
 torch==1.11.0+cpu
-ultralytics
+torchvision==0.12.0+cpu
+tqdm==4.65.0
+ipython==8.14.0
+matplotlib==3.7.2
+opencv-python==4.8.0.74
+pafy==0.5.5
+pandas==2.0.3
+pillow==10.0.0
+psutil==5.9.5
+pyyaml==6.0
+requests==2.31.0
+sentry_sdk==1.27.1
+uvicorn==0.22.0
+youtube_dl==2021.1.3
+tensorboard==2.13.0
